[tool.poetry]
name = "zodchy-rabbitmq"
version = "0.1.1"
description = "RabbitMQ pattern for zodchy architecture"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-rabbitmq"
packages = [{ include = "zodchy_rabbitmq" }]

[tool.poetry.dependencies]
python = "^3.11"
zodchy = "^0"
aio-pika = "^9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"